[package]
name = "atlas"
version = "1.0.1-beta"
edition = "2021"
description = "Atlas | Production Monitor for GitHub Actions (GitLab coming soon)"
authors = ["Ilias El Qadiri"]
license = "Apache-2.0"
keywords = ["github", "actions", "tui", "monitor", "ci", "gitlab"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP + JSON
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Open URLs in browser
open = "5"

# Secure credential storage (macOS Keychain / Windows Credential Manager / Linux Secret Service)
keyring = "3"

# Error handling
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
